k3s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: bagisto-app
  namespace: bagisto
  labels:
    tier: backend
spec:
  replicas: 1
  template:
    metadata:
      name: bagisto-app
      labels:
        app: bagisto-app
        tier: backend
    spec:
      containers:
        - name: bagisto-container
          image: "handersonsilva/switch-software:bagisto-production-app-v1.2.3"
          ports:
            - containerPort: 9000
          resources:
            limits:
              cpu: 400m
            requests:
              cpu: 200m
  selector:
    matchLabels:
      app: bagisto-app
      tier: backend
