k3s/nginx-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: bagisto-web
  namespace: bagisto
  labels:
    tier: backend
    app: bagisto-web
spec:
  replicas: 2
  template:
    metadata:
      name: bagisto-web
      labels:
        tier: backend
        app: bagisto-web
    spec:
      containers:
        - name: bagisto-web-container
          image: "handersonsilva/switch-software:bagisto-production-web-v1.2.5"
          ports:
            - containerPort: 80
          resources:
            limits:
              cpu: 300m
            requests:
              cpu: 100m
          livenessProbe:
            httpGet:
              path: /
              port: 80
            periodSeconds: 30
            failureThreshold: 10
            initialDelaySeconds: 30
            #          readinessProbe:
            #            failureThreshold: 5
            #            httpGet:
            #              path: /
            #              port: 80
            #              scheme: HTTP
            #            initialDelaySeconds: 3
            #            periodSeconds: 30
            #            successThreshold: 1
            #            timeoutSeconds: 1
  selector:
    matchLabels:
      tier: backend
      app: bagisto-web
