k3s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: svc-bagisto-app
  namespace: bagisto
  labels:
    app: bagisto-app
    tier: backend
spec:
  type: ClusterIP
  ports:
    - port: 9000
  selector:
    app: bagisto-app
    tier: backend
